--- a/researchWebsite/src/components/datasets/datasets.css
+++ b/researchWebsite/src/components/datasets/datasets.css
@@ -6,7 +6,7 @@
 
 .dataset {
     border: 1px solid #000000;
-    background-color: rgba(255, 0, 0, 0.3);
+    background-color: rgba(217, 217, 217, 0.3);
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -15,6 +15,8 @@
 
 .datasetContainer {
     margin-top: 10%;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 .datasetTitle {
