--- a/researchWebsite/src/components/main/main.css
+++ b/researchWebsite/src/components/main/main.css
@@ -29,5 +29,11 @@
     background-color: rgba(255, 82, 82, 0.2);
     border-width: 1px;
     border-color: black;
+    border-radius: 3px;
+    width: 5rem;
+}
+
+.controlButton:hover {
+    background-color: rgba(255, 63, 63, 0.2);
     cursor: pointer;
 }
