--- a/researchWebsite/src/components/main/main.css
+++ b/researchWebsite/src/components/main/main.css
@@ -22,18 +22,31 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 5px;
 }
 
 .controlButton {
     margin: 2px;
-    background-color: rgba(255, 82, 82, 0.2);
     border-width: 1px;
+    background-color: white;
     border-color: black;
     border-radius: 3px;
-    width: 5rem;
+    width: 2rem;
 }
 
 .controlButton:hover {
-    background-color: rgba(255, 63, 63, 0.2);
     cursor: pointer;
+}
+
+.displayContainer {
+    border-collapse: collapse;
+}
+
+.displayContainer th, .displayContainer td {
+    border: 1px solid #000;
+    padding: 8px;
+}
+
+.displayContainer th {
+    background-color: #f2f2f2;
 }
