--- a/researchWebsite/src/components/queries/canvas.css
+++ b/researchWebsite/src/components/queries/canvas.css
@@ -11,7 +11,7 @@
 .mapContainer {
     flex: 3;
     padding: 20px;
-    height: 300px;
+    height: 400px;
 }
 
 .optionsContainer {
@@ -84,5 +84,19 @@
 }
 
 .tabs button.active {
-    background-color: #f0f0f0; 
+    background-color: #f0f0f0;
+}
+
+.schemaContainer {
+    margin-top: 20px;
+    background-color: #f7f7f7;
+}
+
+.schemaContainer h3 {
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+.schemaContainer pre {
+    white-space: pre-wrap;
 }
