--- a/researchWebsite/src/components/header/header.css
+++ b/researchWebsite/src/components/header/header.css
@@ -44,6 +44,11 @@
 
 .mainHeaderText {
     font-size: large;
+    transition: color 0.3s ease;
+}
+
+.mainHeaderText:hover {
+    color: rgb(255, 255, 66);
 }
 
 .buttonHeaderText {
