--- a/researchWebsite/src/components/main/main.css
+++ b/researchWebsite/src/components/main/main.css
@@ -1,8 +1,9 @@
 .mainContainer {
     display: flex;
     justify-content: center;
-    width: 90%;
-    height: auto;
+    height: 20%;
+    width: auto;
+    
     margin: 2rem;
     margin-top: 5%;
 }
